# kernels

./: .gitignore  Cargo.toml  README.md  setup.cfg  setup.py
rust_kernels/: __init__.py
src/: chi2.rs  cosine.rs  lib.rs  pairwise_kernel.rs  polynomial.rs  rbf.rs
