[package]
name = "kernels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["blas", "rayon", "approx-0_5"] }
blas-src = { version = "0.8", features = ["openblas"] }
openblas-src = { version = "0.10.5", features = ["cblas", "system"] }
approx = { version = "0.5.1" }
pyo3 = { version = "0.17.2", features = ["extension-module"] }
numpy = { version = "0.17.2" }
num-traits = "0.2.15"

[lib]
name = "rust_kernels"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true


